Use media query to reduce font and img size when width is < 960px Avoid having horizontal scrollbars.

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1776,14 +1776,30 @@ label {
         max-width: 45px;
         max-height: 50px;
     }
+    .device-header-table .device_icon img {
+       max-width: 20px;
+       max-height: 20px;
+    }
+    .device-header-table img {
+       max-width: 115px;
+       max-height: 40px;
+    }
+    .device-header-table {font-size : 8px;}
+    .device-header-table a {font-size : 11px;}
 }
 
-@media only screen and (max-width: 720px) and (min-width: 481px) {
+@media only screen and (max-width: 768px) and (min-width: 481px) {
     .thumbnail_graph_table b { font-size : 8px;}
     .thumbnail_graph_table img {
         max-width: 60px;
         max-height: 55px;
     }
+    .device-header-table img {
+       max-width: 150px;
+       max-height: 50px;
+    }
+    .device-header-table {font-size : 10px;}
+    .device-header-table a {font-size : 17px;}
 }
 
 
